# crypto_trader

./: .gitignore  LICENSE  README.md  pyproject.toml
crypto_trader/: helper.py
crypto_trader/backtester/: backtester.py  getData.py  simulate.py  strategies.py
crypto_trader/data/: getData.py
